usando bootstrap para tabela

--- a/professores/templates/professores/resultado_bancas.html
+++ b/professores/templates/professores/resultado_bancas.html
@@ -20,7 +20,6 @@
   {% include "impressora.html" %}
 
   <span class="titulo">Resultado das Bancas</span>
-  <br>
 
   {% comment %} Seletor da edição da pesquisa {% endcomment %}
   {% include "edicoes.html" %}
@@ -179,16 +178,13 @@
     $('#ProjetosTable tr > *:nth-child(3)').hide();
   </script>
 
+  {% comment %} Esconde informações para impressão {% endcomment %}
   <script>
     document.getElementById("impressora").addEventListener("click", function() {
-        
-        //$('#proximas').hide()
-
         $('#informacoes').hide()
         $('.logo_impressoras').hide()
         $('.topnav').hide()
         $(".imprimir").removeAttr('href');
-        //$('.email').hide()
     });
   </script>
 
