--- a/professores/templates/professores/todos_professores.html
+++ b/professores/templates/professores/todos_professores.html
@@ -14,17 +14,18 @@
 {% block content %}
   
   <span class="titulo">Professores</span>
-  <br>
 
   {% if professores %}
-    <table id="OrganizacoesTable">
+    <table id="OrganizacoesTable" class="table table-bordered table-hover">
+    <thead>
       <tr>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Bancas</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Orientações</th>
-        <th class="text-center">Lattes</th>
+        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Nome</th>
+        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">e-mail</th>
+        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Bancas</th>
+        <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Orientações</th>
+        <th scope="col" class="text-center">Lattes</th>
       </tr>
+      </thead>
       {% for professor in professores %} 
       <tr class="item">
           <td>
