--- a/projetos/static/css/style.css
+++ b/projetos/static/css/style.css
@@ -178,11 +178,15 @@ table, th, td {
 
 .titulo {
   font-size: 30px;
+  display: block;
+  padding-bottom: 0.25em;
 }
 
 @media only screen and (max-width: 740px) {
   .titulo {
     font-size: 21px;
+    display: block;
+    padding-bottom: 0.15em;  
   }
 }
 
@@ -195,6 +199,7 @@ table, th, td {
   }
   .titulo {
     font-size: 18px;
+    display: block;
+    padding-bottom: 0.05em;  
   }
-}
-
+} 
