--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -18,46 +18,50 @@
   <span class="titulo">Organizações Parceiras</span>
 
   {% if organizacoes_list %}
-    <table id="OrganizacoesTable">
-      <tr>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Organização</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Último<br>Contato</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Parceira<br>Desde</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Propostas<br>Enviadas</th>
-        <th onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos<br>Fechados</th>
-      </tr>
-      {% for organizacao,fechados,desde,contato in organizacoes_list %} 
-        <tr class="item">
+    <div class="table-responsive">
+      <table id="OrganizacoesTable" class="table table-bordered table-hover table-sm">
+        <thead class="table-info">
+          <tr>
+            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(1)')" style="cursor:pointer" class="text-center">Organização</th>
+            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(2)')" style="cursor:pointer" class="text-center">Último<br>Contato</th>
+            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(3)')" style="cursor:pointer" class="text-center">Parceira<br>Desde</th>
+            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(4)')" style="cursor:pointer" class="text-center">Propostas<br>Enviadas</th>
+            <th scope="col" onclick="w3.sortHTML('#OrganizacoesTable', '.item', 'td:nth-child(5)')" style="cursor:pointer" class="text-center">Projetos<br>Fechados</th>
+          </tr>
+        </thead>
+        {% for organizacao,fechados,desde,contato in organizacoes_list %} 
+          <tr class="item">
 
-        <td>
-          <a href="{% url 'organizacao_completo' organizacao.id %}">
-            {{organizacao.nome}}
-          </a>
-        </td>
-
-        <td>
-          {% if contato == '---------' %}
-            ---------
-          {% else %}
-            {{contato.momento|date:"m/Y"}}
-          {% endif %}
-          </td>
+          <th scope="row">
+            <a href="{% url 'organizacao_completo' organizacao.id %}">
+              {{organizacao.nome}}
+            </a>
+          </th>
 
           <td>
-            {{desde}}
-          </td>
+            {% if contato == '---------' %}
+              ---------
+            {% else %}
+              {{contato.momento|date:"m/Y"}}
+            {% endif %}
+            </td>
 
-          <td class="text-center">
-            {{organizacao.proposta_set.count|stringformat:"03d"}}
-          </td>
+            <td>
+              {{desde}}
+            </td>
 
-          <td class="text-center">
-            {{fechados|stringformat:"03d"}}
-          </td>
+            <td class="text-center">
+              {{organizacao.proposta_set.count|stringformat:"03d"}}
+            </td>
 
-        </tr>
-      {% endfor %}
-    </table>
+            <td class="text-center">
+              {{fechados|stringformat:"03d"}}
+            </td>
+
+          </tr>
+        {% endfor %}
+      </table>
+    </div>
     <p>&nbsp;</p>
     <strong>Total de Organizações Parceiras:</strong> {{ total_organizacoes }}<br>
     <strong>Total de Propostas Submetidas:</strong> {{ total_submetidos }}<br>
