--- a/organizacoes/templates/organizacoes/todos_parceiros.html
+++ b/organizacoes/templates/organizacoes/todos_parceiros.html
@@ -45,10 +45,14 @@
             {{parceiro.cargo}} 
           </td>
           <td class="text-center">
+            {% if parceiro.organizacao %}
             <a href="{% url 'organizacao_completo' parceiro.organizacao.id %}"
              {% if not parceiro.user.is_active %} style="color: LightBlue;" {% endif %}>
               {{parceiro.organizacao.sigla}}
             </a>
+            {% else %}
+              Organização não identificada
+            {% endif %}
           </td>
           <td>
             <a href="mailto:{{parceiro.user.email}}"
