criando app Operacional

--- a/projetos/templates/index_projetos.html
+++ b/projetos/templates/index_projetos.html
@@ -10,6 +10,9 @@
 
 {% block content %}
 
-    OI
+    <h5>Projetos Fechados</h5>
+    <ul>
+        <a href="{% url 'projetos_fechados' %}"><li>Listagem Geral</li></a>
+    </ul>
 
 {% endblock %}
