--- a/organizacoes/templates/organizacoes/organizacoes_lista.html
+++ b/organizacoes/templates/organizacoes/organizacoes_lista.html
@@ -15,6 +15,10 @@
 
 {% block content %}
 
+  {% with dados='organizacoes' %}
+      {% include "planilhas.html" %}
+  {% endwith %}
+
   <span class="titulo">Organizações Parceiras</span>
 
   {% if organizacoes_list %}
